--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@primeng/themes": "^19.1.3",
     "@supabase/supabase-js": "^2.50.0",
     "chart.js": "^4.5.0",
     "fitness-app": "file:",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
