--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               }
             ],
             "styles": [
+               "node_modules/primeicons/primeicons.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -89,6 +90,7 @@
               }
             ],
             "styles": [
+               "node_modules/primeicons/primeicons.css",
               "src/styles.css"
             ],
             "scripts": []
